[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/health-bar-bg.png" type="Texture" id=2]
[ext_resource path="res://Assets/health-bar-fill-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/health-bar-fill-1.png" type="Texture" id=4]
[ext_resource path="res://Entities/Ship/Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=6]
[ext_resource path="res://Assets/nebula01.png" type="Texture" id=7]
[ext_resource path="res://Assets/DynamicFight_1.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/DeepSpaceA.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/arrow.png" type="Texture" id=10]
[ext_resource path="res://Systems/ScreenShake.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Camera2D.gd" type="Script" id=12]
[ext_resource path="res://Entities/Ship/AI/Bot.tscn" type="PackedScene" id=13]


[sub_resource type="DynamicFont" id=1]
size = 75
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "took_damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 10, 10 ), Vector2( 20, 10 ), Vector2( 10, 10 ), Vector2( 0, 10 ), Vector2( 10, 10 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "took_damage"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 950, 10 ), Vector2( 940, 10 ), Vector2( 950, 10 ), Vector2( 960, 10 ), Vector2( 950, 10 ) ]
}

[sub_resource type="Curve2D" id=4]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1280, 0, 0, 0, 0, 0, 1280, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Game" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
position = Vector2( 752, 464 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
limit_left = -100
limit_top = -100
limit_right = 1380
limit_bottom = 820
editor_draw_limits = true
script = ExtResource( 12 )

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 11 )]

[node name="Player1" parent="." instance=ExtResource( 5 )]
position = Vector2( 1024, 416 )

[node name="Player2" parent="." instance=ExtResource( 13 )]
position = Vector2( 256, 416 )
player_index = 2

[node name="Bullets" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Asteroids" type="Node2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="HUD" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartCountdownLabel" type="Label" parent="HUD"]
margin_left = 608.0
margin_top = 304.0
margin_right = 685.0
margin_bottom = 467.0
custom_fonts/font = SubResource( 1 )
text = "3...
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictoryLabel" type="Label" parent="HUD"]
visible = false
margin_left = -16.0
margin_top = 272.0
margin_right = 1309.0
margin_bottom = 435.0
custom_fonts/font = SubResource( 1 )
text = "Jogador 2 venceu!
Pressione \"R\" ou \"Start\" para recome√ßar"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar2" type="TextureRect" parent="HUD"]
margin_left = 11.6
margin_top = 10.0
margin_right = 331.6
margin_bottom = 46.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthValue2" type="TextureProgress" parent="HUD/HealthBar2"]
margin_left = 32.0
margin_top = 8.0
margin_right = 288.0
margin_bottom = 38.0
value = 100.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween2" type="Tween" parent="HUD/HealthBar2"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/HealthBar2"]
anims/took_damage = SubResource( 2 )

[node name="HealthBar1" type="TextureRect" parent="HUD"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = 910.0
margin_top = 10.0
margin_right = 1240.0
margin_bottom = 46.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthValue1" type="TextureProgress" parent="HUD/HealthBar1"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -298.0
margin_top = 8.0
margin_right = 32.0
margin_bottom = 44.0
value = 100.0
texture_progress = ExtResource( 4 )
fill_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween1" type="Tween" parent="HUD/HealthBar1"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="HUD/HealthBar1"]
anims/took_damage = SubResource( 3 )

[node name="AsteroidSpawn" type="Path2D" parent="."]
curve = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AsteroidSpawnLocation" type="PathFollow2D" parent="AsteroidSpawn"]

[node name="GameStartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AsteroidSpawnTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Arrow1" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0.25, 0.25, 1 )
position = Vector2( -112, 320 )
texture = ExtResource( 10 )

[node name="Arrow2" type="Sprite" parent="."]
visible = false
modulate = Color( 0.25, 0.25, 1, 1 )
position = Vector2( -112, 416 )
texture = ExtResource( 10 )
[connection signal="game_started" from="." to="Player1" method="_on_World_game_started"]
[connection signal="game_started" from="." to="Player2" method="_on_World_game_started"]
[connection signal="game_won" from="." to="Player1" method="_on_World_game_won"]
[connection signal="game_won" from="." to="Player2" method="_on_World_game_won"]
[connection signal="timeout" from="GameStartTimer" to="." method="_on_GameStartTimer_timeout"]
[connection signal="timeout" from="AsteroidSpawnTimer" to="." method="_on_AsteroidSpawnTimer_timeout"]
